infra/etapa2/service.tf
resource "aws_ecs_service" "app" {
  name = "app"
  cluster = aws_ecs_cluster.main.id
  task_definition = aws_ecs_task_definition.app.arn
  launch_type = "FARGATE"
  desired_count = 1

  force_new_deployment = true

  deployment_minimum_healthy_percent = 0
  deployment_maximum_percent = 100

    network_configuration {
        subnets = [aws_subnet.public.id]
        security_groups = [aws_security_group.frontend_sg.id]
        assign_public_ip = true
    }
}
